# UniversalTaskSolver

./: .gitignore  README.md
BallsAndHolesGame/: BallsAndHolesGame.cpp  BallsAndHolesGame.h  BallsAndHolesGame.vcxproj  BallsAndHolesGame.vcxproj.filters  Board.cpp  Board.h  Objects.cpp  Objects.h  main.cpp
BallsAndHolesGame/src/: BallsAndHolesGame.cpp  BallsAndHolesGame.h  Board.cpp  Board.h  CMakeLists.txt  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  GameView.cpp  GameView.h  I_GameController.h  I_GameModel.h  I_GameView.h  Objects.cpp  Objects.h  main.cpp
BallsAndHolesTests/: BallsAndHolesTests.vcxproj  BallsAndHolesTests.vcxproj.filters  boardTests.cpp  stdafx.cpp  unittest1.cpp
LetterRotateGame/: LetterRotateGame.cpp  LetterRotateGame.sln  LetterRotateGame.vcxproj  LetterRotateGame.vcxproj.filters  main.cpp
LetterRotateGame/src/: LetterRotateGame.cpp  LetterRotateGame.h  main.cpp
UnitTests/: UnitTests.sln
UnitTests/UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters  unittest.cpp
UniversalTaskSolver/: UniversalTaskSolver.sln
UniversalTaskSolver/UniversalTaskSolver/: Graph.cpp  Graph.h  UniversalTaskSolver.h  UniversalTaskSolver.vcxproj  UniversalTaskSolver.vcxproj.filters
UniversalTaskSolver/UniversalTaskSolver/src/: Defines.h  Graph.cpp  Graph.h  GreedyAlg.cpp  GreedyAlg.h  TaskGraph.cpp  TaskGraph.h  UniversalTaskSolver.cpp  UniversalTaskSolver.h
